compilation_errors.txt
   |          ^^^^^^ help: convert the identifier to upper camel case: `SizeT`

warning: unused import: `get_errno`
  --> kernel/src/libc/io_manager.rs:19:26
   |
19 | use crate::libc::error::{get_errno, set_errno};
   |                          ^^^^^^^^^

warning: unused imports: `EAGAIN` and `EIO`
  --> kernel/src/libc/io_manager.rs:20:64
   |
20 | use crate::libc::error::errno::{EBADF, EINVAL, ENOMEM, ENOENT, EIO, EAGAIN, EMFILE};
   |                                                                ^^^  ^^^^^^

warning: unused imports: `FileMode as VfsFileMode` and `file as VfsFile`
  --> kernel/src/libc/io_manager.rs:21:18
   |
--
   |     ^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `get_errno`
  --> kernel/src/libc/math_lib.rs:11:26
   |
11 | use crate::libc::error::{get_errno, set_errno};
   |                          ^^^^^^^^^

warning: type `size_t` should have an upper camel case name
  --> kernel/src/libc/string_lib.rs:13:10
   |
--
   |          ^^^^^^ help: convert the identifier to upper camel case: `SizeT`

warning: unused import: `get_errno`
  --> kernel/src/libc/string_lib.rs:14:26
   |
14 | use crate::libc::error::{get_errno, set_errno};
   |                          ^^^^^^^^^

warning: type `c_long` should have an upper camel case name
   --> kernel/src/libc/string_lib.rs:727:10
    |
--
   |          ^^^^^^^^^^^ help: convert the identifier to upper camel case: `SusecondsT`

warning: unused import: `get_errno`
  --> kernel/src/libc/time_lib.rs:16:26
   |
16 | use crate::libc::error::{get_errno, set_errno};
   |                          ^^^^^^^^^

warning: unused import: `crate::drivers::console`
  --> kernel/src/libc/time_lib.rs:18:5
   |
--
   |     ^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `get_errno` and `set_errno`
  --> kernel/src/libc/random_lib.rs:13:26
   |
13 | use crate::libc::error::{get_errno, set_errno};
   |                          ^^^^^^^^^  ^^^^^^^^^

warning: unused import: `crate::libc::error::errno::EINVAL`
  --> kernel/src/libc/random_lib.rs:14:5
   |
14 | use crate::libc::error::errno::EINVAL;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `get_errno`
  --> kernel/src/libc/env_lib.rs:15:26
   |
15 | use crate::libc::error::{get_errno, set_errno};
   |                          ^^^^^^^^^

warning: unused import: `ENOENT`
  --> kernel/src/libc/env_lib.rs:16:49
   |
16 | use crate::libc::error::errno::{EINVAL, ENOMEM, ENOENT};
   |                                                 ^^^^^^

warning: unused import: `c_short`
  --> kernel/src/libc/sysinfo_lib.rs:11:32
   |
--
   |                                ^^^^^^^

warning: unused import: `get_errno`
  --> kernel/src/libc/sysinfo_lib.rs:13:26
   |
13 | use crate::libc::error::{get_errno, set_errno};
   |                          ^^^^^^^^^

warning: unused import: `crate::libc::memory_adapter::get_libc_adapter`
  --> kernel/src/libc/implementations.rs:20:5
   |
--
  --> kernel/src/libc/implementations.rs:48:13
   |
48 |     pub use crate::libc::implementations::UnifiedCLib;
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `error::*`
  --> kernel/src/libc/mod.rs:55:9
   |
55 | pub use error::*;
   |         ^^^^^^^^

warning: unused import: `config::*`
  --> kernel/src/libc/mod.rs:56:9
   |
--
              `SyscallError` implements `From<ExecError>`
              `SyscallError` implements `From<KernelError>`
              `SyscallError` implements `From<SocketError>`
              `SyscallError` implements `From<net::NetworkError>`
              `SyscallError` implements `From<tcp::manager::TcpError>`
              `SyscallError` implements `From<vfs::error::VfsError>`

error[E0308]: mismatched types
   --> kernel/src/syscalls/enhanced_error_handler.rs:317:24
    |
317 |             cpu_usage: 0.0,
--
    |                         arguments to this method are incorrect
    |
note: method defined here
   --> kernel/src/posix/advanced_tests.rs:50:12
    |
 50 |     pub fn fail(&mut self, error: &str) {
    |            ^^^^            -----------
help: consider borrowing here
    |
108 |                 context.fail(&error);
    |                              +
--
    |                                                                     ^^^^^^^^^^^^^^^^^ value borrowed here after move
    |
note: consider changing this parameter type in method `handle_error` to borrow instead if owning the value isn't necessary
   --> kernel/src/error_handling/error_handling_traits.rs:393:62
    |
393 |     pub fn handle_error(&self, error: UnifiedError, context: EnhancedErrorContext) -> Result<ErrorHandlingResult, &'static str> {
    |            ------------ in this method                       ^^^^^^^^^^^^^^^^^^^^ this parameter takes ownership of the value
help: consider cloning the value if the performance cost is acceptable
    |
102 |         let handling_result = match self.unified_manager.handle_error(unified_error.clone(), enhanced_context.clone()) {
    |                                                                                                              ++++++++
--
    |                                    ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_severity`

warning: unused variable: `error`
   --> kernel/src/syscalls/enhanced_error_handler.rs:432:28
    |
432 |     fn handle_error(&self, error: UnifiedError) -> Result<ErrorHandlingResult, &'static str> {
    |                            ^^^^^ help: if this is intentional, prefix it with an underscore: `_error`

warning: unused variable: `file`
   --> kernel/src/process/manager.rs:908:21
    |
--
    |             ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_current_tid`

Some errors have detailed explanations: E0061, E0069, E0117, E0277, E0282, E0308, E0382, E0433, E0502...
For more information about an error, try `rustc --explain E0061`.
warning: `kernel` (lib) generated 854 warnings
error: could not compile `kernel` (lib) due to 294 previous errors; 854 warnings emitted
